# Server

./: .rustfmt.toml  .rusty-hook.toml  Cargo.toml  migrate.ps1  readme.md
entity/: Cargo.toml
entity/src/: lib.rs
entity/src/entities/: mod.rs  prelude.rs  release.rs  sea_orm_active_enums.rs  song.rs  user.rs
migration/src/: lib.rs  m20220101_000001_create_tables.rs  m20241103_183032_create_release.rs  m20241103_183623_create_artist.rs
schema/: artist.pg.hcl  credit_role.pg.hcl  image.pg.hcl  label.pg.hcl  release.pg.hcl  song.pg.hcl  user.pg.hcl
src/: main.rs
src/controller/: graphql.rs  mod.rs  user.rs
src/model/: graphql_input.rs  graphql_output.rs  input.rs  input_model.rs  mod.rs  output_model.rs
src/resolver/: juniper.rs  mod.rs  release.rs  song.rs  user.rs  user_resolver.rs
src/service/: database.rs  juniper.rs  mod.rs  release.rs  song.rs  user.rs
