[workspace]
members = [
    ".",
    "entity",

]

[workspace.dependencies]
axum = "0.7"
dotenvy = "0.15"
juniper = "0.16"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [
    "full",
] }

[package]
edition = "2021"
name    = "thcdb_rs"
version = "0.1.0"

[dependencies]
entity = { path = "./entity" }

axum.workspace    = true
dotenvy.workspace = true
sea-orm.workspace = true
tokio.workspace   = true
