[workspace]
members = [
    ".",
    "entity",

]

[workspace.dependencies]
entity = { path = "./entity" }

anyhow = "1.0.92"
axum = { version = "0.7.7", features = [ "macros" ] }
dotenvy = "0.15"
itertools = "0.13.0"
juniper = "0.16"
juniper_axum = "0.1.1"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [
    "full",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[package]
edition = "2021"
name    = "thcdb_rs"
version = "0.1.0"

[dependencies]
entity.workspace             = true
anyhow.workspace             = true
axum.workspace               = true
dotenvy.workspace            = true
itertools.workspace          = true
juniper.workspace            = true
juniper_axum.workspace       = true
sea-orm.workspace            = true
serde.workspace              = true
tokio.workspace              = true
tracing-subscriber.workspace = true
tracing.workspace            = true
once_cell = "1.20.2"

[profile.release]
codegen-units   = 1
debug           = false
lto             = "thin"
opt-level       = 3
overflow-checks = true
panic           = "abort"
