[workspace]
members = [
    ".",
    "entity",

]

[workspace.dependencies]
entity = { path = "./entity" }
# external
anyhow = "1.0.92"
argon2 = "0.5.3"
axum = { version = "0.7.7", features = [ "macros", "multipart"] }
chrono = "0.4.38"
dotenvy = "0.15"
itertools = "0.13.0"
juniper = { version = "0.16", features = [ "chrono" ] }
juniper_axum = "0.1.1"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
] }
serde = { version = "1", features = [ "derive" ] }
tokio = { version = "1", features = [
    "full",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "chrono" ] }

[package]
edition = "2021"
name    = "thcdb_rs"
version = "0.1.0"

[dependencies]
anyhow.workspace             = true
argon2.workspace             = true
axum.workspace               = true
chrono.workspace             = true
dotenvy.workspace            = true
entity.workspace             = true
itertools.workspace          = true
juniper.workspace            = true
juniper_axum.workspace       = true
once_cell                    = "1.20.2"
regex                        = "1.11.1"
sea-orm.workspace            = true
serde.workspace              = true
tokio.workspace              = true
tracing-subscriber.workspace = true
tracing.workspace            = true
serde_json = "1.0.132"
image = "0.25.5"
xxhash-rust = { version = "0.8.12" , features = ["std", "xxh3"]}
base64 = "0.22.1"

[dev-dependencies]
rusty-hook = "0.11.2"

[profile.release]
codegen-units   = 1
debug           = false
lto             = "thin"
opt-level       = 3
overflow-checks = true
panic           = "abort"
